--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div class="container">
-        
+        <nav>
+            <img src="images/logo.png">
+            <ul>
+                <li></li>
+            </ul>
+        </nav>
     </div>
 </body>
 </html>
