Add navigation links and language button to the navbar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
         <nav>
             <img src="images/logo.png">
             <ul>
-                <li></li>
+                <li><a href="#">Market</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">White Papers</a></li>
+                <li><a href="#">About Us</a></li>
             </ul>
+            <a href="#" class="btn">EN</a>
         </nav>
     </div>
 </body>
