--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             </ul>
             <a href="#" class="btn">EN</a>
         </nav>
+        <div class="content">
+            <h1>BUY & SELL <span>Crypto</span></h1>
+            <p>World's biggest Cryptocurrency exchange available on web <br>as well as mobile phone. </p>
+            <a href="#" class="btn">EXPLORE MORE </a>
+        </div>
     </div>
 </body>
 </html>
