--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
                 <img src="images/dogecoin.png">
                 <div>
                     <h3>$00</h3>
-                    <p>Dogecoin</p>
-                </div>
+                    <p>Dogecoin</p>                </div>
             </div>
-
         </div>
     </div>
 </body>
